2000-01-24  Thomas E. Dickey  <dickey@clark.net>

	* aclocal.m4: resync with my-autoconf (minor changes)

	* src/ftree.c: don't bother making zero[] const (it's inconsistent).
	open .ftree file in binary mode using O_BINARY flag defined on PC ports.
	use NAMLEN() macro

	* src/dedtype.c: use NAMLEN() macro

2000-01-17  Thomas E. Dickey  <dickey@clark.net>

	* src/makefile.in:
	add $x (PROG_EXT) to path for ../bin/ded, for OS/2 EMX

	* src/ded.c:
	the whoami string may be modified by which() to add a .exe for OS/2 EMX.
	simply overwrite the suffix (if any) with the ".hlp" to construct ded.hlp

1999-11-30  Thomas E. Dickey  <dickey@clark.net>

	* mkdirs.sh: OS/2

1999-08-16  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	handle read from pipe on BeOS, which has no /dev/tty (just a bunch of pty's
	that can be found with ttyname()).

	* src/ded.h: fallback definition for BeOS's S_IEXEC

	* src/dedtype.c:
	arg: BeOS has long long type used for ino_t (so I have to cast it down to
	long to make it portable).

1999-08-10  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c: change -b to toggle

	* src/deddoit.c:
	SCO sets errno to EPERM in system() even when there's no error.

1999-08-09  Thomas E. Dickey  <dickey@clark.net>

	* src/dedcolor.c:
	duh.  I never did test with the .dir_colors file using names.  debugged this
	on SCO, added the ability to use mixed case names.

	* src/cnames.rc: RCS_BASE

1999-08-07  Thomas E. Dickey  <dickey@clark.net>

	* src/ccodes.rc: updates from Slackware 3.6

1998-12-09  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: resync with my-autoconf (copyright)

1998-09-17  Thomas E. Dickey  <dickey@clark.net>

	* src/ded.c:
	fix so the -i option "works" even when I don't have color, and
	check the length of the command-line sort-options so I don't accidentally
	assume "-swb" is the same as "-bsw"

1998-07-21  Thomas E. Dickey  <dickey@clark.net>

	* src/dedline.c: oops: wrong ifdef for chown vs chgrp
